# AssayReport

./: .gitignore  README.md  start_all.ps1
Back/: .env  03_result_assay.py
Front/: package-lock.json
NLP/: 01_jobkorea_scraper.py  02_Keyword_extraction.py  03_result_assay.py  Dockerfile  NLP_Project.ipynb  README.md  jobkorea_keyword_analysis.csv  jobkorea_scraper.py  keyword_extraction.py  linked_scraper.py  pipeline.py  pyproject.toml  resume_evaluator.py  run.bat  run.ps1  test_evaluation.py  test_keyword_extraction.py
NLP/.claude/: settings.local.json
NLP/Back/: 03_result_assay.py
NLP/Back/Spring/resume/src/main/java/com/NLP/resume/exception/: DuplicateUserIdException.java
NLP/Back/Spring/resume/src/main/java/com/NLP/resume/security/: CustomUserDetailsService.java  JwtAuthenticationEntryPoint.java  JwtTokenProvider.java
NLP/Back/Spring/resume/src/test/java/com/NLP/resume/: ResumeApplicationTests.java
NLP/Front/blog/: package-lock.json
NLP/Front/blog/src/: App.css
NLP/Front/blog/src/Api/: AuthApi.jsx
NLP/Front/blog/src/Navigation/: AppNavigation.jsx  AuthNavigation.jsx
NLP/Front/blog/src/Screens/: MainPage.jsx  SignUpPage.jsx
NLP/Front/blog/src/scss/Screens/: Auth.scss  Main.scss  Record.scss
NLP/data/: companies.json  job_keywords_analysis.csv  job_keywords_analysis.json  job_keywords_by_position.csv  job_keywords_by_position.json  jobkorea_scraping_result.csv  jobkorea_scraping_result.json  key_words_analysis.csv  key_words_analysis.json  linked_scraping_result.csv  linked_scraping_result.json  top_100_companies.json  잡코리아_합격자소서.xlsx
(+51 files in other folders)
