[project]
name = "nlp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "kiwipiepy>=0.23.0",
    "nltk>=3.8.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]

